# spacex-data-engineering-pipeline

./: DETAILS.md  README.md  pyproject.toml
docker/: docker-compose.yml
docker/trino-config/: jvm.config  node.properties
docker/trino-config/catalog/: postgresql.properties
sql/: init.sql
sql/analytics/: launch_performance_over_time.sql  launch_site_utilization.sql  time_between_engine_test_and_actual_launch.sql  top_payload_masses.sql
src/: aggregations.py  api.py  database.py  ingest.py  models.py  test_aggregations.py
